--- a/src/content/blogs/marketing-de-produto.mdx
+++ b/src/content/blogs/marketing-de-produto.mdx
@@ -2,7 +2,7 @@
 title: "Marketing de Produto: Como Posicionar, Destacar e Vender com Estratégia"
 description: "Descubra como o marketing de produto pode impulsionar suas vendas, fortalecer sua marca e criar diferenciais competitivos duradouros."
 date: "2024-02-10"
-tags: ["marketing-de-produto", "posicionamento", "estratégia"]
+tags: ["marketing-de-produto","posicionamento","estratégia","instagram"]
 readTime: "8 min"
 image: "/images/blog/marketing-produto.jpg"
 ---
