--- a/src/content/blogs/primeiro-post.mdx
+++ b/src/content/blogs/primeiro-post.mdx
@@ -2,9 +2,9 @@
 title: "Como o Marketing Digital Pode Transformar Seu Negócio"
 description: "Descubra as estratégias mais eficazes de marketing digital para alavancar seus resultados e conquistar mais clientes."
 date: "2024-01-15"
-tags: ["marketing-digital", "estratégia", "crescimento"]
+tags: ["marketing-digital","estratégia","crescimento"]
 readTime: "5 min"
-image: "/images/blog/marketing-digital.jpg"
+image: "/uploads/blogs/images/3c5a0451-7468-495e-8405-977bd52d3f72.jpeg"
 ---
 
 # Como o Marketing Digital Pode Transformar Seu Negócio
