--- a/src/content/blogs/marketing-de-produto.mdx
+++ b/src/content/blogs/marketing-de-produto.mdx
@@ -4,7 +4,7 @@ description: "Descubra como o marketing de produto pode impulsionar suas vendas,
 date: "2024-02-10"
 tags: ["marketing-de-produto","posicionamento","estratégia","instagram"]
 readTime: "8 min"
-image: "/uploads/blogs/images/9f1378c5-2594-44e3-87ae-0ea5b6654a69.jpeg"
+image: "/uploads/blogs/images/8edf2c2c-d01b-4d4f-a069-3f4211accf3c.jpg"
 ---
 
 # Marketing de Produto: Como Posicionar, Destacar e Vender com Estratégia
